Fix DCHECK to assert always

Change DCHECK(1) to DCHECK(0) so we always assert because we should
never reach this code.

BUG=597359
TEST=none

Review URL: https://codereview.chromium.org/1844293006

Cr-Commit-Position: refs/heads/master@{#384717}

Former-commit-id: bd6ff6faa76af34b6478396e8ca6aea0f746029f